--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>通义千问聊天AI</title>
+    <style>
+        .chat-content {
+            margin: 10px 0;
+        }
+
+        .user-input {
+            display: block;
+            margin: 20px 0;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>hello vite</h1>
+    <div id="chat-box">
+        <!-- 对话显示区域 -->
+    </div>
+
+    <textarea class="user-input" id="user-input" rows="4" cols="50" placeholder="请输入您的问题"> </textarea>
+    <button id="send-button">发送</button>
+    <!-- <h1>hello vite</h1> -->
     <script type="module" src="./src/main.js"></script>
-    <div id="imga"></div>
+    <!-- <div id="imga"></div> -->
     <!-- <iframe src="./src/one.html" frameborder="0"></iframe> -->
 </body>
+
 </html>
