--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>通义千问聊天AI</title>
-    <style>
-        .chat-content {
-            margin: 10px 0;
-        }
-
-        .user-input {
-            display: block;
-            margin: 20px 0;
-        }
-    </style>
+    <title>Document</title>
 </head>
 
 <body>
@@ -24,9 +14,9 @@
 
     <textarea class="user-input" id="user-input" rows="4" cols="50" placeholder="请输入您的问题"> </textarea>
     <button id="send-button">发送</button>
-    <!-- <h1>hello vite</h1> -->
+    <h1>hello vite</h1>
     <script type="module" src="./src/main.js"></script>
-    <!-- <div id="imga"></div> -->
+    <div id="imga"></div>
     <!-- <iframe src="./src/one.html" frameborder="0"></iframe> -->
 </body>
 
